--- a/cnt/news.html
+++ b/cnt/news.html
@@ -3,7 +3,7 @@
     <nav class="depth_2 swiper-container border-box-all">
       <ul class="swiper-wrapper"></ul>
     </nav>
-    <a href="" class="news_tag_plus">
+    <a href="" class="plus">
       <span class="font_zero">관심 태그 추가하기</span>
     </a>
   </div>
