--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
       <div class="copyright margin">ⓒ SK텔레콤 Crop.</div>
     </footer>
   </div>
-  <!-- <script src="./res/js/jquery-3.5.0.slim.min.js" charset="utf-8"></script> -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="./res/js/swiper.min.js" charset="utf-8"></script>
+
   <script type="text/javascript">
 // Start [Global 변수 선언]
   var user_cate = {
@@ -191,8 +189,12 @@
   });
 // << END "컨텐츠 슬라이더"
   </script>
-
+<div id="script">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="./res/js/swiper.min.js" charset="utf-8"></script>
   <script src="./res/js/index.js" charset="utf-8"></script>
+</div>
+
 </body>
 
 </html>
