--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   });
 
   cnt_slider.on('slidePrevTransitionEnd', function() {
-    var $head = $('head');
+    var $head = $('head'),
         page_id = $body.attr('id').replace('pid_',''),
         arry = chk_obj_el_index(user_cate, page_id, 'prev'),
         page_id = Object.keys(user_cate)[arry[1]],
@@ -168,12 +168,13 @@
     cnt_slider.removeSlide(3);
     $head.append("<link rel=stylesheet href=./res/css/"+ prev_id +".css>");
     $('[data-id='+prev_id+']').load("./cnt/"+ prev_id + ".html");
-    $head.append("<script src=./res/js/"+ prev_id +".js charset=utf-8></script>");
+    $body.append("<script src=./res/js/"+ prev_id +".js charset=utf-8></script>");
     depth_1.slideTo(arry[1]);
   });
 
   cnt_slider.on('slideNextTransitionEnd', function() {
-    var page_id = $body.attr('id').replace('pid_',''),
+    var $head = $('head'),
+        page_id = $body.attr('id').replace('pid_',''),
         arry = chk_obj_el_index(user_cate, page_id, 'next'),
         page_id = Object.keys(user_cate)[arry[1]],
         next_id = Object.keys(user_cate)[arry[2]];
@@ -181,18 +182,16 @@
     $body.attr('id','pid_'+ page_id);
     cnt_slider.appendSlide("<div data-id="+ next_id +" class='swiper-slide'></div>");
     cnt_slider.removeSlide(0);
-    $('head').append("<link rel=stylesheet href=./res/css/"+ next_id +".css>");
+    $head.append("<link rel=stylesheet href=./res/css/"+ next_id +".css>");
     $('[data-id='+ next_id +']').load("./cnt/"+ next_id +".html");
-    $head.append("<script src=./res/js/"+ next_id +".js charset=utf-8></script>");
+    $body.append("<script src=./res/js/"+ next_id +".js charset=utf-8></script>");
     depth_1.slideTo(arry[1]);
   });
 // << END "컨텐츠 슬라이더"
   </script>
-<div id="script">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./res/js/swiper.min.js" charset="utf-8"></script>
   <script src="./res/js/index.js" charset="utf-8"></script>
-</div>
 
 </body>
 
