--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         <div class="swiper-slide"></div>
       </div>
     </div>
+    </hr>
     <footer>
-      <div class="ad_wrap margin">
+      <div class="ad_wrap box_all">
         <div ad-style="" ad-data-id="footer" ad-data-cate="">
           <img src="./res/img/dummy_ad_bnr.png" alt="광고타이틀출력">
         </div>
