--- a/cnt/home.html
+++ b/cnt/home.html
@@ -96,7 +96,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -107,7 +107,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -118,7 +118,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -129,7 +129,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -140,7 +140,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -151,7 +151,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -162,7 +162,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -173,7 +173,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -195,7 +195,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -206,7 +206,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -217,7 +217,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -228,7 +228,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -239,7 +239,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -250,7 +250,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -261,7 +261,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
@@ -272,7 +272,7 @@
           <div class="img_wrap">
             <img src="./res/img/icon_dummy.png" with="56px" heigh="56px" alt="타이틀출력">
           </div>
-          <div class="name">
+          <div class="name line_cut th2">
             <span class="cate_name">카테고리</span>
             <span class="tit">타이틀출력</span>
           </div>
