--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     </hr>
     <footer>
-      <div class="ad_wrap box_all">
+      <div class="ad_wrap box_all lay_wrap">
         <div ad-style="" ad-data-id="footer" ad-data-cate="">
           <img src="./res/img/dummy_ad_bnr.png" alt="광고타이틀출력">
         </div>
