--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
       cnt_slider.removeSlide(3);
       $head.append("<link rel=stylesheet href=./res/css/"+ prev_id +".css>");
       $('[data-id='+prev_id+']').load("./cnt/"+ prev_id + ".html");
-      append_script(prev_id);
       depth_1.slideTo(arry[1]);
+      append_css(prev_id);
+      append_script(prev_id);
       $(window).scrollTop(0);
     });
 
@@ -157,8 +158,9 @@
       cnt_slider.removeSlide(0);
       $head.append("<link rel=stylesheet href=./res/css/"+ next_id +".css>");
       $('[data-id='+ next_id +']').load("./cnt/"+ next_id +".html");
-      append_script(next_id);
       depth_1.slideTo(arry[1]);
+      append_css(prev_id);
+      append_script(next_id);
       $(window).scrollTop(0);
     });
   // << END "컨텐츠 슬라이더"
