--- a/cnt/news.html
+++ b/cnt/news.html
@@ -4,7 +4,7 @@
       <ul class="swiper-wrapper"></ul>
     </nav>
     <a href="" class="plus">
-      <span class="font_zero">관심 태그 추가하기</span>
+      <span class="hide">관심 태그 추가하기</span>
     </a>
   </div>
   <div>news</div>
@@ -12,6 +12,5 @@
 <script type="text/javascript">
   $(function() {
     console.log(cate_length);
-    console.log('뉴스 케이트 로드');
   });
 </script>
