--- a/cnt/game.html
+++ b/cnt/game.html
@@ -1,3 +1,16 @@
 <article page_id="game">
+  <div id="nav_2">
+    <nav class="depth_2 swiper-container border-box-all">
+      <ul class="swiper-wrapper"></ul>
+    </nav>
+    <a href="" class="plus">
+      <span class="hide">관심 태그 추가하기</span>
+    </a>
+  </div>
   <div>game</div>
 </article>
+<script type="text/javascript">
+  $(function() {
+    console.log(cate_length);
+  });
+</script>
