--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
   var depth_1 = new Swiper('.depth_1', {
     slidesPerView: 'auto',
     spaceBetween: 0,
+    autoHeight: true,
     loop: true,
     centeredSlides: true,
     freeMode: true,
