--- a/cnt/home.html
+++ b/cnt/home.html
@@ -282,3 +282,12 @@
   </div>
 <!-- end 게임 슬라이드 -->
 </article>
+<script type="text/javascript">
+  $(function() {
+    var slider_type1 = new Swiper('.slider_type1', {
+      slidesPerView: 'auto',
+      spaceBetween: 8,
+      freeMode: true,
+    });
+  });
+</script>
