--- a/cnt/news.html
+++ b/cnt/news.html
@@ -1,4 +1,4 @@
-<article page_id="news">
+<article page_id="news" class="art_wrap">
   <div id="nav_2">
     <nav class="depth_2 swiper-container border-box-all">
       <ul class="swiper-wrapper"></ul>
@@ -27,7 +27,7 @@
         $nav2 = $('#nav_2 .swiper-wrapper');
   // End [변수 선언]
 
-  
+
   // 서브메뉴 슬라이더
       var depth_2 = new Swiper('.depth_2', {
         slidesPerView: 'auto',
