--- a/cnt/car.html
+++ b/cnt/car.html
@@ -1,4 +1,4 @@
-<article page_id="car">
+<article page_id="car" class="art_wrap">
   <div id="nav_2">
     <nav class="depth_2 swiper-container border-box-all">
       <ul class="swiper-wrapper"></ul>
