--- a/cnt/economy.html
+++ b/cnt/economy.html
@@ -1,4 +1,4 @@
-<article page_id="economy">
+<article page_id="economy" class="art_wrap">
   <div id="nav_2">
     <nav class="depth_2 swiper-container border-box-all">
       <ul class="swiper-wrapper"></ul>
