--- a/cnt/enter.html
+++ b/cnt/enter.html
@@ -1,4 +1,4 @@
-<article page_id="enter">
+<article page_id="enter" class="art_wrap">
   <div id="nav_2">
     <nav class="depth_2 swiper-container border-box-all">
       <ul class="swiper-wrapper"></ul>
