--- a/cnt/game.html
+++ b/cnt/game.html
@@ -1,4 +1,4 @@
-<article page_id="game">
+<article page_id="game" class="art_wrap">
   <div id="nav_2">
     <nav class="depth_2 swiper-container border-box-all">
       <ul class="swiper-wrapper"></ul>
