--- a/cnt/car.html
+++ b/cnt/car.html
@@ -2,7 +2,7 @@
   <div id="nav_2">
     <nav class="depth_2 swiper-container border-box-all">
       <ul class="swiper-wrapper"></ul>
-    </nav>s
+    </nav>
     <a href="" class="plus">
       <span class="hide">관심 태그 추가하기</span>
     </a>
