--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 <body id="">
   <div class="wrap">
-    <header>
-      <div id="btn_menu" class="flex">
+    <header id="header">
+      <div id="btn_menu" class="flex box_all">
         <div class="icon_menu">
           <div class="icon_menu_inner"></div>
         </div>
       </div>
-      <div id="mypage" class="backdrop_st01">
+      <div id="mypage" class="box_all backdrop_st01">
         <div class="login"></div>
         <div class="logout"></div>
       </div>
