--- a/cnt/home.html
+++ b/cnt/home.html
@@ -18,7 +18,7 @@
     </form>
   </div>
 <!-- end 검색어 입력창 -->
-
+  <hr class="hide"/>
 <!-- 즐겨찾기 -->
   <div class="bmk lay_wrap">
     <h2 class="tit hide">즐겨찾기 리스트</h2>
@@ -74,7 +74,7 @@
     </ul>
   </div>
 <!-- end 즐겨찾기 -->
-
+  <hr class="hide"/>
 <!-- 광고출력 -->
   <div class="ad_bnr lay_wrap full">
     <h2 class="tit hide">광고타이틀출력</h2>
@@ -83,7 +83,29 @@
     </a>
   </div>
 <!-- end 광고출력 -->
-
+  <hr class="hide"/>
+<!-- 날씨 출력 -->
+  <div class="widget_weather">
+    <div class="box">
+      <div class="left">
+        <div class="icon"><img src="http://devintro.t-page.co.krimg/icon_weather_umbrella.svg" alt=""></div>
+        <div class="txt">
+          <div class="temp">
+            <span class="tempc">12.6°C</span>
+            <span class="sky">맑음</span>
+          </div>
+          <div class="loc">서울특별시 중구</div>
+        </div>
+      </div>
+      <div class="right">
+        <div><span>미세<strong>보통</strong></span><span>초미세<strong>나쁨</strong></span></div>
+        <div><span>4°C / 14°C</span><span><img src="http://devintro.t-page.co.krimg/icon_weather_umbrella.svg" alt="">0%</span></div>
+      </div>
+    </div>
+    <div class="btn_wrap"></div>
+  </div>
+<!-- end 날씨 출력 -->
+  <hr class="hide"/>
 <!-- 뉴스 슬라이드 -->
   <div class="main_news slider_type1 lay_wrap swiper-container">
     <div class="tit_wrap margin">
@@ -182,7 +204,7 @@
     </ul>
   </div>
 <!-- end 뉴스 슬라이드 -->
-
+  <hr class="hide"/>
 <!-- 게임 슬라이드 -->
   <div class="main_game slider_type1 lay_wrap swiper-container">
     <div class="tit_wrap margin">
@@ -281,13 +303,145 @@
     </ul>
   </div>
 <!-- end 게임 슬라이드 -->
-  <script type="text/javascript">
-    $(function() {
-      var slider_type1 = new Swiper('.slider_type1', {
-        slidesPerView: 'auto',
-        spaceBetween: 8,
-        freeMode: true,
-      });
-    });
-  </script>
+  <hr class="hide"/>
+<!-- 편리한T 슬라이드 -->
+  <div class="main_skt_service slider_type1 lay_wrap swiper-container">
+    <div class="tit_wrap margin">
+      <h2 class="tit">게임</h2>
+      <a class="more" href="#"><span class="hide">더보기</span></a>
+    </div>
+    <ul class="cnt_type2 swiper-wrapper">
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="./res/img/icon_dummy.png" alt="서비스명">
+          </div>
+          <div class="name">
+            <span>서비스명</span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="./res/img/icon_dummy.png" alt="서비스명">
+          </div>
+          <div class="name">
+            <span>서비스명</span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="./res/img/icon_dummy.png" alt="서비스명">
+          </div>
+          <div class="name">
+            <span>서비스명</span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="./res/img/icon_dummy.png" alt="서비스명">
+          </div>
+          <div class="name">
+            <span>서비스명</span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="./res/img/icon_dummy.png" alt="서비스명">
+          </div>
+          <div class="name">
+            <span>서비스명</span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="./res/img/icon_dummy.png" alt="서비스명">
+          </div>
+          <div class="name">
+            <span>서비스명</span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="./res/img/icon_dummy.png" alt="서비스명">
+          </div>
+          <div class="name">
+            <span>서비스명</span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="./res/img/icon_dummy.png" alt="서비스명">
+          </div>
+          <div class="name">
+            <span>서비스명</span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="./res/img/icon_dummy.png" alt="서비스명">
+          </div>
+          <div class="name">
+            <span>서비스명</span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="./res/img/icon_dummy.png" alt="서비스명">
+          </div>
+          <div class="name">
+            <span>서비스명</span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="./res/img/icon_dummy.png" alt="서비스명">
+          </div>
+          <div class="name">
+            <span>서비스명</span>
+          </div>
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="#">
+          <div class="img_wrap">
+            <img src="./res/img/icon_dummy.png" alt="서비스명">
+          </div>
+          <div class="name">
+            <span>서비스명</span>
+          </div>
+        </a>
+      </li>
+    </ul>
+  </div>
+<!-- end 편리한T 슬라이드 -->
 </article>
+<hr class="foot"/>
+<script type="text/javascript">
+  $(function() {
+    var slider_type1 = new Swiper('.slider_type1', {
+      slidesPerView: 'auto',
+      spaceBetween: 8,
+      freeMode: true,
+    });
+  });
+</script>
