--- a/cnt/news.html
+++ b/cnt/news.html
@@ -7,7 +7,10 @@
       <span class="hide">관심 태그 추가하기</span>
     </a>
   </div>
-  <div>news</div>
+  <div>
+
+    
+  </div>
 </article>
 <script type="text/javascript">
   // Start [Global 변수 선언]
