--- a/cnt/news.html
+++ b/cnt/news.html
@@ -7,10 +7,7 @@
       <span class="hide">관심 태그 추가하기</span>
     </a>
   </div>
-  <div>
-
-    
-  </div>
+  <div class="depth_2_wrap"></div>
 </article>
 <script type="text/javascript">
   // Start [Global 변수 선언]
@@ -41,5 +38,6 @@
   // 서브메뉴 슬라이더 끝
   $(function() {
     console.log(cate_length);
+
   });
 </script>
