--- a/index.html
+++ b/index.html
@@ -33,18 +33,13 @@
           <ul class="swiper-wrapper"></ul>
         </nav>
       </div>
-      <div id="search_wrap" class="backdrop_st01">
-        <div id="btn_search" class="flex">
-          <img src="./res/img/icon_search.png" alt="검색버튼">
-        </div>
-        <form class="sch_form" name="search" role="search" action="">
+      <div id="btn_search" class="flex backdrop_st01">
+        <img src="./res/img/icon_search.png" alt="검색버튼">
+      </div>
+      <div id="search_wrap">
+        <form class="sch_form backdrop_st01" name="search" role="search" action="">
           <input type="search" name="" title="검색어를 입력해주세요." placeholder="검색어를 입력해주세요." class="" autocomplete="off" maxlength="255" autocorrent="off" autocapitalize="off">
-          <button class="clear" type="button" name="input_clear">입력된 검색어 삭제</button>
-          <button class="searh" type="button" name="button">
-            <img src="./res/img/icon_search.png" alt="검색버튼">
-          </button>
         </form>
-        <div class="close"></div>
       </div>
     </header>
     <div id="cnt" class="cnt_slider swiper-container">
